--- a/app/views/curation_concerns/generic_works/_show_page_image.html.erb
+++ b/app/views/curation_concerns/generic_works/_show_page_image.html.erb
@@ -1,7 +1,6 @@
 <%# CHF custom, alternative to `representative_media` for show page, image
     with overlayed controls and info %>
-
-<div class="show-page-image">
+<%= content_tag("div", class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do %>
   <a href="javascript: alert('pretend its a viewer');" class="show-page-image-viewer-link"></a>
     <%= image_tag(main_app.download_path(file_set, file: "jpeg"),
                           class: "show-page-image-image",
@@ -28,11 +27,11 @@
           </ul>
         </div>
       <% end %>
-      <% if respond_to?(:contextual_path) %>
-        <%= link_to "Info", contextual_path(file_set, @presenter), class: "btn btn-primary show-page-image-info" %>
-      <% end %>
+
+      <%= link_to "Info", contextual_path(file_set, @presenter), class: "btn btn-primary show-page-image-info" %>
+
     </div>
-</div>
+<% end %>
 
 
 
