permission badge on show file thumbs, only if not public

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -40,6 +40,17 @@
   }
 }
 
+.show-page-image-permission {
+  .label {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
 
 
 
