representative image not repeated in other pages, if it's the first one

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -52,7 +52,7 @@
 
   <%# render partial: 'chf_show_page', collection: @presenter.member_presenters, as: :member %>
   <%= render partial: 'show_page_image',
-             collection: @presenter.member_presenters,
+             collection: @presenter.show_thumb_member_presenters,
              as: :file_set,
              locals: {
                extra_classes: 'thumb',
