--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -71,6 +71,7 @@
       // keep crazy long aspect ratio images from being
       // so long, although there will be some distortion.
       max-height: 30vw;
+      min-height: 60px; // just so it's something!
     }
   }
 
