local is called 'member', it's not just filesets

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -53,7 +53,7 @@
   <%# render partial: 'chf_show_page', collection: @presenter.member_presenters, as: :member %>
   <%= render partial: 'show_page_image',
              collection: @presenter.show_thumb_member_presenters,
-             as: :file_set,
+             as: :member,
              locals: {
                extra_classes: 'thumb',
                actions_as_icon: true,
