--- a/app/views/curation_concerns/generic_works/_show_page_image.html.erb
+++ b/app/views/curation_concerns/generic_works/_show_page_image.html.erb
@@ -2,20 +2,20 @@
     with overlayed controls and info %>
 <%= content_tag("div", class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do %>
   <a href="javascript: alert('pretend its a viewer');" class="show-page-image-viewer-link"></a>
-    <%= image_tag(main_app.download_path(file_set.representative_id, file: "jpeg"),
+    <%= image_tag(main_app.download_path(member.representative_id, file: "jpeg"),
                           class: "show-page-image-image",
                           alt: "",
                           role: "presentation") %>
 
 
     <div class="show-page-image-permission">
-      <% if file_set.needs_permission_badge? %>
-        <%= file_set.permission_badge %>
+      <% if member.needs_permission_badge? %>
+        <%= member.permission_badge %>
       <% end %>
     </div>
 
     <div class="show-page-image-bar">
-      <% if can?(:read, file_set.id) %>
+      <% if can?(:read, member.id) %>
         <div class="btn-group dropup">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <% if local_assigns[:actions_as_icon] %>
@@ -26,10 +26,10 @@
           </button>
           <ul class="dropdown-menu">
             <li>
-              <%= link_to main_app.download_path(file_set.representative_id),
+              <%= link_to main_app.download_path(member.representative_id),
                           target: "_new",
                           id: "file_download",
-                          data: { label: file_set.id } do %>
+                          data: { label: member.id } do %>
                   Original Image
               <% end %>
             </li>
@@ -39,7 +39,7 @@
         </div>
       <% end %>
 
-      <%= link_to (local_assigns[:actions_as_icon] ? "<i class='fa fa-info'></i>".html_safe : "Info"), contextual_path(file_set, @presenter), class: "btn btn-primary show-page-image-info" %>
+      <%= link_to (local_assigns[:actions_as_icon] ? "<i class='fa fa-info'></i>".html_safe : "Info"), contextual_path(member, @presenter), class: "btn btn-primary show-page-image-info" %>
 
     </div>
 <% end %>
