--- a/app/views/curation_concerns/generic_works/_show_page_image.html.erb
+++ b/app/views/curation_concerns/generic_works/_show_page_image.html.erb
@@ -1,7 +1,7 @@
 <%# CHF custom, alternative to `representative_media` for show page, image
     with overlayed controls and info %>
 <%= content_tag("div", class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do %>
-  <a href="javascript: alert('pretend its a viewer');" class="show-page-image-viewer-link"></a>
+  <a href="javascript: alert('this would open a viewer but not implemented yet');" class="show-page-image-viewer-link"></a>
     <%= image_tag(main_app.download_path(member.representative_id, file: "jpeg"),
                           class: "show-page-image-image",
                           alt: "",
