--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -57,6 +57,7 @@
              locals: {
                extra_classes: 'thumb',
                actions_as_icon: true,
+               lazy_after: 6
              }
   %>
 
