--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -1,7 +1,6 @@
 <% provide :page_title, @presenter.page_title %>
 
-<div class="work-show">
-  <div itemscope itemtype="http://schema.org/CreativeWork" class="row">
+<div class="work-show" itemscope itemtype="http://schema.org/CreativeWork" class="row">
 
   <% if current_ability.current_user.staff? %>
     <div class="work-show-admin">
@@ -60,52 +59,6 @@
                lazy_after: 6
              }
   %>
-
-
-  <hr>
-
-
-
-
-
-
-    <div class="col-xs-12">
-      <header>
-        <%= render 'work_title', presenter: @presenter %>
-        <% if @presenter.additional_title.present? %>
-          <ul class="additional-titles list-unstyled">
-            <% @presenter.additional_title.each do |title| %>
-              <li><h2><%= title %></h2></li>
-            <% end %>
-          </ul>
-        <% end %>
-      </header>
-
-    </div>
-    <div class="col-sm-8">
-      <%= render 'work_description', presenter: @presenter %>
-      <%= render 'relationships', presenter: @presenter %>
-      <%= render 'metadata', presenter: @presenter %>
-    </div>
-    <div class="col-sm-4">
-      <%= render "show_actions", presenter: @presenter %>
-      <%= t('.last_modified', value: @presenter.date_modified) %>
-      <%= render 'representative_media', presenter: @presenter %>
-      <%= render 'large_rights_statement', presenter: @presenter %>
-      <%= render 'social_media' %>
-      <%= render 'citations', presenter: @presenter %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-12">
-      <%= render 'items', presenter: @presenter %>
-      <%= render 'workflow_actions_widget', presenter: @presenter %>
-      <%#= render 'sharing_with', presenter: @presenter %>
-      <%#= render 'user_activity', presenter: @presenter %>
-    </div>
-  </div>
-  <% @presenter.member_presenters.each do |mp| %>
-    <%= render 'lightbox_preview', presenter: mp %>
-  <% end %>
 </div>
+
+
