vertical align thumbs bottom looks better

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -75,7 +75,7 @@
     margin: 4px 4px 0 0;
     img {
       width: 100%;
-      vertical-align: top;
+      vertical-align: bottom;
       // keep crazy long aspect ratio images from being
       // so long, although there will be some distortion.
       max-height: 30vw;
