--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -3,7 +3,7 @@
 <%= content_tag("div", class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do %>
   <a href="javascript: alert('this would open a viewer but not implemented yet');" class="show-page-image-viewer-link"></a>
 
-    <% if local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] %>
+    <% if local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1 %>
       <%= image_tag nil,
                     class: "lazyload show-page-image-image",
                     alt: "",
@@ -13,7 +13,7 @@
       %>
     <% else %>
       <%= image_tag main_app.download_path(member.representative_id, file: "jpeg"),
-                    class: "lazyload show-page-image-image",
+                    class: "show-page-image-image",
                     alt: ""
       %>
     <% end %>
