--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -5,17 +5,20 @@
   background-color: $brand-inverse;
 }
 
+/* staff navbar has an effective margin of 15
+   slightly wider than masthead navbar */
 .staff-navbar {
   /* ensure dropdowns show above other navbars */
   /* (masthead coded upstream at 1001) */
   z-index: 1002;
-  /* line up with the logo */
+  /* offset left margin of first button */
   margin-left: -15px;
 }
 
+/* masthead navbar has an effective margin of 20 */
 .masthead {
   min-height: 90px;
-  padding: 15px 15px;
+  padding: 20px 5px 20px 20px;
   .navbar-nav > li > a,
   .navbar-nav > li > a:hover,
   .navbar-nav > li > a:focus,
