--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -132,12 +132,12 @@
 
     .large-rights-statement, .social-media {
       flex: 1;
-      flex-basis: 220px;
+      flex-basis: 170px;
       padding: 0;
       margin: 0;
     }
     .social-media {
-      @media (min-width: $screen-md-min) {
+      @media (min-width: $screen-lg-min) {
         text-align: right;
        }
     }
