Add caption to hero image, refs #568

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -1,2 +1,15 @@
 $brand-inverse: rgb(31,37,52);
 $brand-secondary: rgb(2, 165, 226); /* bright blue */
+$transparent-background: rgba(0,0,0,0.25);
+
+@mixin all-white-links {
+  a,
+  a:link,
+  a:active,
+  a:visited,
+  a:hover {
+    color: white;
+    text-decoration: none;
+    opacity: 1;
+  }
+}
