--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row hero-search-container no-gutters">
     <figure class="hero-image col-xs-12 col-md-7">
       <%= image_tag "molecules_that_matter.jpg", alt: "molecules that matter" %>
-      <%# TODO: image credit inset bottom left %>
+      <figcaption><%= hero_link('w6634363x') %></figcaptionw>
     </figure>
     <div class="col-xs-12 col-md-5">
       <div class="row search-container">
@@ -17,7 +17,6 @@
         <div class="search-callouts col-xs-12 col-sm-6 col-md-12">
           <%= render 'catalog/search_form' %>
           <%# TODO: add 'public domain only' toggle %>
-          <%# TODO: browse_all button %>
           <%= link_to "BROWSE ALL",
             main_app.search_catalog_path,
             class: "btn btn-primary btn-lg chf-callout-button" %>
