Add synthetic categories layout and images, refs #568

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -27,8 +27,8 @@
 
   <%# TODO: recent additions will go here %>
 
-  <div class="row digital-collections">
-    <%= render 'home_content' %>
+  <div class="row categories-list">
+    <%= render partial: "category_teaser", collection: CHF::SyntheticCategory.all, as: :category %>
   </div>
 
   <div class="row featured-collection-container">
