--- a/app/assets/stylesheets/local/index.scss
+++ b/app/assets/stylesheets/local/index.scss
@@ -30,6 +30,9 @@
   .search-container {
     padding-left: 5px;
     padding-right: 5px;
+    @media (min-width: $screen-md-min) {
+      margin: 20% 15% 0 8%;
+    }
   }
 
   .search-callouts {
@@ -39,28 +42,63 @@
         height: 100%
       }
     }
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+      /* vertically line up with header when side-by-side */
+      /* stacks with searchbar margin to equal 20 */
+      margin-top: 13px;
+    }
   }
 
+  /* change date facet submit button styling */
   .range_limit {
     input[type=submit] {
       @extend .btn-primary;
     }
   }
 
+  /* Remove brokenly styled numbers on search results */
   ol.catalog {
     list-style: none;
   }
 
-  @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-    .search-callouts {
-      /* vertically line up with header when side-by-side */
-      /* stacks with searchbar margin to equal 20 */
-      margin-top: 13px;
-    }
-  }
-  @media (min-width: $screen-md-min) {
-    .search-container {
-      margin: 20% 15% 0 8%;
+  $categories-box-width: 350px;
+  $categories-box-height: 350px;
+  $categories-box-margin: 59px;
+
+  .categories-list {
+    padding-top: 34px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .collection {
+      position: relative;
+      width: $categories-box-width;
+      height: $categories-box-height;
+      margin: $categories-box-margin;
+
+      @include all-white-links;
+
+      .collection-title-wrapper {
+        /* overlay on image */
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 56px;
+        background-color: $brand-inverse;
+        padding: 10px;
+
+        .collection-title {
+          text-align: center;
+          font-family: "Open Sans";
+          font-weight: 700;
+          font-size: 18px;
+          padding-top: 5px;
+          padding-bottom: 5px;
+        }
+      }
     }
   }
 }
