Add new hero image, refs #568

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row hero-search-container no-gutters">
     <figure class="hero-image col-xs-12 col-md-7">
-      <%= image_tag "molecules_that_matter.jpg", alt: "molecules that matter" %>
+      <%= image_tag "hero_image_144.jpg", alt: "" %>
       <figcaption><%= hero_link('w6634363x') %></figcaptionw>
     </figure>
     <div class="col-xs-12 col-md-5">
