--- a/app/assets/stylesheets/local/index.scss
+++ b/app/assets/stylesheets/local/index.scss
@@ -30,6 +30,12 @@
   .search-container {
     padding-left: 5px;
     padding-right: 5px;
+    @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
+      margin-top: 30px;
+    }
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+      margin: 30px 20px 0;
+    }
     @media (min-width: $screen-md-min) {
       margin: 20% 15% 0 8%;
     }
