--- a/app/views/sufia/homepage/_category_teaser.html.erb
+++ b/app/views/sufia/homepage/_category_teaser.html.erb
@@ -1,6 +1,6 @@
 <div class="collection">
   <%= link_to synthetic_category_path(category.slug) do %>
-    <%= image_tag "synthetic_categories/#{category.category_key}_144.jpg", class: "category-image", size: "350" %>
+    <%= image_tag "synthetic_categories/#{category.category_key}_2x.jpg", class: "category-image", size: "350" %>
     <div class="collection-title-wrapper">
       <p class="collection-title"><%= category.title.upcase %></p>
     </div>
