--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -27,7 +27,7 @@
   <div class="work-show-representative">
       <%= show_page_representative_media(@presenter) %>
       <div class="rights-and-social">
-        <%= render 'large_rights_statement', presenter: @presenter %>
+        <%= render 'rights_statement', presenter: @presenter, theme: 'large' %>
         <%= render 'social_media' %>
       </div>
   </div>
