--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -35,6 +35,8 @@
             <% end %>
           </button>
           <ul class="dropdown-menu">
+            <li><%= render 'rights_statement', presenter: @presenter, theme: 'inline' %></li>
+            <li class="divider"></li>
             <li>
               <%= link_to main_app.download_path(member.representative_id),
                           target: "_new",
