--- a/app/assets/stylesheets/local/index.scss
+++ b/app/assets/stylesheets/local/index.scss
@@ -117,16 +117,31 @@
   .featured-collection-callouts {
     padding-left: 5px;
     padding-right: 5px;
-    @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
+  }
+  @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
+    .featured-collection-callouts {
       margin-top: 30px;
     }
-    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-      margin: 100px 20px 0;
-    }
-    @media (min-width: $screen-md-min) {
-      margin: 15% 15% 0 8%;
+  }
+  @media (min-width: $screen-sm-min) {
+    .featured-collection-container {
+      display: flex;
+      align-items: center;
+      .featured-collection-callouts {
+        margin-left: 10%;
+        margin-right: 2%;
+        /*margin: 0 2% 0 10%;*/
+        h2 {
+          margin-top: 0;
+        }
+      }
     }
   }
 
-
+  .featured-collection-image {
+    padding: 0;
+    img {
+      width: 100%;
+    }
+  }
 }
