--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -33,7 +33,7 @@
 
   <div class="row featured-collection-container no-gutters">
     <div class="col-xs-12 col-sm-6">
-      <div class="row featured-collection-callouts">
+      <div class="row featured-collection-callouts no-gutters">
         <div class="col-xs-12">
           <h2>Featured Collection</h2>
           <p>The <%= link_to "Beckman Historical Collection", collection_path('wh246s128') %> is an archival collection of materials related to American scientist and industrialist Arnold O. Beckman (1900-2004) and the scientific and medical instrumentation companies he founded and influenced.</p>
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="featured-collection-image hidden-xs col-sm-6">
-      <%= image_tag "featured_collection_144.jpg", alt: "" %>
+      <%= image_tag "featured_collection_2x.jpg", alt: "" %>
     </div>
   </div>
 
