--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -38,8 +38,10 @@
             <i class='fa fa-download'></i> <% if ! current_ability.current_user.staff? %> Download <% end %>
           </button>
           <ul class="dropdown-menu">
-            <li><%= render 'rights_statement', presenter: @presenter, theme: 'inline' %></li>
-            <li class="divider"></li>
+            <% if @presenter.has_rights_statement? %>
+              <li><%= render 'rights_statement', presenter: @presenter, theme: 'inline' %></li>
+              <li class="divider"></li>
+            <% end %>
             <li>
               <%= link_to main_app.download_path(member.representative_id),
                           target: "_new",
