show page representative thumb should have blue overlay buttons

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -139,6 +139,14 @@
     }
   }
 
+  // main one should have btn-primary colors.
+  .work-show-representative .show-page-image-bar {
+    background: transparentize($btn-primary-bg, .3);
+    .btn-primary {
+      border-color: darken($btn-primary-border, .3);
+    }
+  }
+
   header h1 {
     margin-top: 0;
   }
