--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -122,7 +122,7 @@
     }
   }
 
-  @media (min-width: $grid-float-breakpoint) {
+  @media (min-width: $screen-sm-min) {
     .work-show-representative, .work-show-metadata, .work-show-title {
       width: 50%;
       padding: 0 15px;
