--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -1,5 +1,5 @@
-<%# CHF custom, alternative to `representative_media` for show page, image
-    with overlayed controls and info %>
+<%# CHF custom, an image with overlaid controls and info. Used as an alternative to
+    `representative_media` for show page, as well as for page thumbs on show page %>
 <%= content_tag("div", class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do %>
   <a href="javascript: alert('this would open a viewer but not implemented yet');" class="show-page-image-viewer-link"></a>
 
