Javascript image viewer
javascript image viewer

---

viewer header styled

viewer page layout

openseadragon gem isn't 1.0 yet, avoid bad version in spec

viewer thumbs

viewer thumbs on side when viewport large enough

viewer nav button styling

openseadragon added with fixed stock image

it's still insisting on looking for 'full page' icon images, which we don't use

hack openseadragon to not have a full page button

viewer can actually open desired image

viewer selected thumb is highlighted and scrolled to

viewer next and previous

better way to suppress openseadragon full page button

viewer CSS with proper selector specificity. bah, this makes me think there's a better way to organize this css

better viewer thumb selection highlight

missing suffix on image asset works in dev but not production ha

better padding

viewer, keep header from flex shrinking

cache member_presenters properly

this is a terrible hack, but don't know any other way to let us call this crazy expensive call more than once, as we need to for our show/viewer

viewer, fix thumbnail scroll in FF

Maybe my flex-in-flex-in-flex is too much? But this seems to have done it.

viewer does not need that weird <a> tag, we can just make the image clickable and styled with pointer

improve viewer loading spinner

restore open proper image in viewer

better viewer open target

more careful targetting

image viewer use bootstrap modal

kinda hacky, but bootstrap modal takes care of some tricky things for us
cross-browser with full page scrollbar and tabindexes

image viewer custom animation

image viewer keyboard navable

viewer, urls to indiv pages

viewer smaller header padding

viewer next/prev buttons to the side

viewer add rotation buttons

make viewer prev/next more centered

viewer, no rotate left button needed

viewer, better right/left styling

viewer better child work integration

viewer, hide multi-page controls when only one page

viewer only show info for non-filesets

viewer style inf

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -24,11 +24,13 @@
   }
 
   // main one should have btn-primary colors.
-  .work-show-representative .show-page-image .show-page-image-bar {
+  .work-show-representative .show-page-image .show-page-image-bar .btn-primary:not(:hover):not(:active):not(:focus) {
     background: transparentize($btn-primary-bg, .3);
-    .btn-primary {
-      border-color: darken($btn-primary-border, .3);
-    }
+    border-color: darken($btn-primary-border, .3);
+  }
+  // and be big big
+  .work-show-representative .show-page-image .show-page-image-bar .btn {
+    font-size: 125%;
   }
 
   header h1 {
@@ -99,20 +101,13 @@
   // elements are absolutely positioned within it.
   .show-page-image {
     position: relative;
+    cursor: pointer;
 
     .show-page-image-image {
       width: 100%;
       // keep crazy long aspect ratio images from being
       // so long, although there will be some distortion.
       max-height: 80vw;
-    }
-
-    // An <a> that's over the whole image to make sure it's clickable
-    .show-page-image-viewer-link {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 100%;
     }
 
     .show-page-member-title {
@@ -146,10 +141,7 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background: transparentize($brand-inverse, .3);
-      .btn-primary {
-        border-color: darken($brand-inverse, 5%);
-      }
+
       .btn-group {
         width: 100%;
         .btn { width: 100%; }
@@ -157,17 +149,13 @@
           left: 5px;
         }
       }
-      a, button {
+      & > button, & > .btn, & > .btn-group > button {
         flex: 1;
         border-radius: 0;
-        background: transparent;
       }
-    }
-
-    &:hover .show-page-image-bar {
-      background: transparentize($btn-primary-bg, .3);
-      .btn-primary {
-        border-color: darken($btn-primary-border, .3);
+      .btn-primary:not(:hover):not(:active):not(:focus) {
+        background: transparentize($brand-inverse, .3);
+        border-color: darken($brand-inverse, 5%);
       }
     }
 
